header portion html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!--==================== UNICONS ====================-->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!--==================== SWIPER CSS ====================-->
   <link rel="stylesheet" href="">
@@ -14,13 +15,59 @@
   <!--==================== CSS ====================-->
   <link rel="stylesheet" href="assets/CSS/styles.css">
 
-  <title>Responsive Portfolio Website</title>
+  <title>My Portfolio</title>
 </head>
 
 <body>
   <!--==================== HEADER ====================-->
   <header class="header" id="header">
+    <nav class="nav container">
+      <a href="#" class="nav__logo">Pauline Rouger(logo soon)</a>
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list grid">
+          <li class="nav__item">
+            <a href="#home" class="nav__link active-link">
+              <i class="uil uil-estate nav__icon"></i> Home
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link">
+              <i class="uil uil-user nav__icon"></i> About
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#skills" class="nav__link">
+              <i class="uil uil-file-alt nav__icon"></i> Skills
+            </a>
+          </li>
+          <!-- <li class="nav__item">
+            <a href="#services" class="nav__link">
+              <i class="uil uil-briefcase-alt nav__icon"></i> Services
+            </a>
+          </li> -->
+          <li class="nav__item">
+            <a href="#portfolio" class="nav__link">
+              <i class="uil uil-scenery nav__icon"></i> Portfolio
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#contact" class="nav__link">
+              <i class="uil uil-estate nav__icon"></i> Contact Me
+            </a>
+          </li>
+        </ul>
+        <i class="uil uil-times nav__close" id="nav-close"></i>
+      </div>
 
+      <div class="nav__btns">
+        <!--Theme change button-->
+        <i class="uil uil-moon change-theme" id="theme-button"></i>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="uil uil-apps"></i>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <!--==================== MAIN ====================-->
