added logo, description and keyword to header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome! I'm a Web Devolper, come check out my portfolio">
+  <meta name="keyword" content="HTML, CSS, JavaScript, Ruby, Ruby on Rails, Devolper">
 
   <!--==================== UNICONS ====================-->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -15,14 +17,16 @@
   <!--==================== CSS ====================-->
   <link rel="stylesheet" href="assets/CSS/styles.css">
 
-  <title>My Portfolio</title>
+  <title>Web Dev & Artist - Pauline Rouger</title>
+  <link rel="shortshut icon" href="img/PR_logo.png">
+
 </head>
 
 <body>
   <!--==================== HEADER ====================-->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">Pauline Rouger(logo soon)</a>
+      <a href="#" class="nav__logo"><img src="assets/img/PR_logo.png" alt="PR Logo" style="width:50px;height:50px;"></a>
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list grid">
           <li class="nav__item">
