--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Welcome! I'm a Web Devolper, come check out my portfolio">
-  <meta name="keyword" content="HTML, CSS, JavaScript, Ruby, Ruby on Rails, Devolper">
+  <meta name="keyword" content="HTML, CSS, JavaScript, Ruby, Ruby on Rails, Developer">
 
   <!--==================== UNICONS ====================-->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/CSS/styles.css">
 
   <title>Web Dev & Artist - Pauline Rouger</title>
-  <link rel="shortshut icon" href="img/PR_logo.png">
+  <link rel="icon" href="assets/img/PR_logo_white.png">
 
 </head>
 
