home section added

--- a/index.html
+++ b/index.html
@@ -77,9 +77,54 @@
   <!--==================== MAIN ====================-->
   <main class="main">
     <!--==================== HOME ====================-->
-    <section class="home section" id="home">
+<section class="home section" id="home">
+  <div class="home__container container grid">
+    <div class="home__content grid">
+      <div class="home__social">
+        <a href="https://www.linkedin.com/in/paulinerouger/" target="_blank" class="home__social-icon">
+          <i class="uil uil-linkedin-alt"></i>
+        </a>
+        <a href="https://stackoverflow.com/users/16621883/paulinetw" target="_blank" class="home__social-icon">
+          <i class="fa fa-stack-overflow"></i>
+        </a>
+        <a href="https://github.com/PaulineTW" target="_blank" class="home__social-icon">
+          <i class="uil uil-github-alt"></i>
+        </a>
+      </div>
 
-    </section>
+      <div class="home__img">
+        <svg class="home__blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink">
+          <mask id="mask0" mask-type="alpha">
+            <path d="M44.1,-69.3C56.6,-60.5,66,-47.5,70.9,-33.4C75.7,-19.3,76,-4.2,75.9,12.4C75.8,29,75.4,47,67,59.9C58.6,72.8,42.3,80.7,25.5,84.6C8.7,88.4,-8.6,88.2,-24.5,83.5C-40.5,78.8,-55.2,69.7,-65.4,57.1C-75.5,44.5,-81.1,28.5,-81.3,13C-81.5,-2.5,-76.2,-17.5,-70,-32.4C-63.9,-47.3,-56.7,-62.2,-44.9,-71.3C-33,-80.5,-16.5,-83.9,-0.4,-83.3C15.8,-82.7,31.5,-78.1,44.1,-69.3Z" transform="translate(100 100)" />
+          </mask>
+          <g mask="url(#mask0)">
+            <path d="M44.1,-69.3C56.6,-60.5,66,-47.5,70.9,-33.4C75.7,-19.3,76,-4.2,75.9,12.4C75.8,29,75.4,47,67,59.9C58.6,72.8,42.3,80.7,25.5,84.6C8.7,88.4,-8.6,88.2,-24.5,83.5C-40.5,78.8,-55.2,69.7,-65.4,57.1C-75.5,44.5,-81.1,28.5,-81.3,13C-81.5,-2.5,-76.2,-17.5,-70,-32.4C-63.9,-47.3,-56.7,-62.2,-44.9,-71.3C-33,-80.5,-16.5,-83.9,-0.4,-83.3C15.8,-82.7,31.5,-78.1,44.1,-69.3Z" transform="translate(100 100)"/>
+            <image class="home__blob-img" x="12" y="18" xlink:href="assets/img/popo-removebg.png" />
+          </g>
+        </svg>
+
+      </div>
+      <div class="home__data">
+        <h1 class="home__title">Welcome, I'm Pauline !</h1>
+        <h3 class="home__subtitle">Full-Stack Developer</h3>
+        <p class="home__description">High level experience in web application development and producing quality work.
+        </p>
+        <a href="#contact" class="button button--flex">
+          Contact Me <i class="uil uil-message button__icon"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="home_scroll">
+      <a href="#about" class="home__scroll-button button--flex">
+        <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+        <span class="home__scroll-name">Scroll down</span>
+        <i class="uil uil-arrow-down homw__scroll-arrow"></i>
+      </a>
+    </div>
+  </div>
+</section>
 
     <!--==================== ABOUT ====================-->
     <section class="about section" id="about">
