--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </mask>
           <g mask="url(#mask0)">
             <path d="M44.1,-69.3C56.6,-60.5,66,-47.5,70.9,-33.4C75.7,-19.3,76,-4.2,75.9,12.4C75.8,29,75.4,47,67,59.9C58.6,72.8,42.3,80.7,25.5,84.6C8.7,88.4,-8.6,88.2,-24.5,83.5C-40.5,78.8,-55.2,69.7,-65.4,57.1C-75.5,44.5,-81.1,28.5,-81.3,13C-81.5,-2.5,-76.2,-17.5,-70,-32.4C-63.9,-47.3,-56.7,-62.2,-44.9,-71.3C-33,-80.5,-16.5,-83.9,-0.4,-83.3C15.8,-82.7,31.5,-78.1,44.1,-69.3Z" transform="translate(100 100)"/>
-            <image class="home__blob-img" x="12" y="18" xlink:href="assets/img/popo-removebg.png" />
+            <image class="home__blob-img" x="12" y="18" href="assets/img/popo-removebg.png" />
           </g>
         </svg>
 
