--- a/index.html
+++ b/index.html
@@ -127,10 +127,44 @@
 </section>
 
     <!--==================== ABOUT ====================-->
-    <section class="about section" id="about">
+<section class="about section" id="about">
+  <h2 class="section__title"> About Me</h2>
+  <!-- <span class="section__subtitle">My introduction</span> -->
 
+  <div class="about__container container grid">
+    <img src="assets/img/about.jpg" alt="" class="about__img">
 
-    </section>
+    <div class="about__data">
+      <p class="about__description">
+        Web developer, with extensive knowledge and years of experience, working in web
+        technologies and Ui/Ux design, delivering quality work.
+      </p>
+
+      <!-- <div class="about__info">
+        <div>
+          <span class="about__info-title">02+</span>
+          <span class="about__info-name">Years <br> experience </span>
+        </div>
+
+        <div>
+          <span class="about__info-title">02+</span>
+          <span class="about__info-name">Companies <br> worked </span>
+        </div>
+
+        <div>
+          <span class="about__info-title">07+</span>
+          <span class="about__info-name">Completed <br> projects </span>
+        </div>
+      </div> -->
+      <div class="about__buttons">
+        <a download="" href="assets/pdf/pauline_rouger_resume.pdf" class="button button--flex">
+          Download CV <i class="uil uil-download-alt button__icon"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+</section>
 
     <!--==================== SKILLS ====================-->
     <section class="skills section" id="skills">
