--- a/index.html
+++ b/index.html
@@ -129,21 +129,23 @@
     <!--==================== ABOUT ====================-->
 <section class="about section" id="about">
   <h2 class="section__title"> About Me</h2>
-  <!-- <span class="section__subtitle">My introduction</span> -->
+  <span class="section__subtitle">My introduction</span>
 
   <div class="about__container container grid">
     <img src="assets/img/about.jpg" alt="" class="about__img">
 
     <div class="about__data">
       <p class="about__description">
-        Web developer, with extensive knowledge and years of experience, working in web
-        technologies and Ui/Ux design, delivering quality work.
+        I am a Junior Developer career pivoting from the travel industry, with experience working with Rails. My previous career
+        as a team leader and entrepreneur allowed me to be collaborative and creative, which is something I now enjoy bringing
+        to my code. I am empathetic, approachable and an active listener; traits that allow me to create great projects and
+        build relationships along the way.
       </p>
 
-      <!-- <div class="about__info">
+      <div class="about__info">
         <div>
           <span class="about__info-title">02+</span>
-          <span class="about__info-name">Years <br> experience </span>
+          <span class="about__info-name">Years <br> working experience </span>
         </div>
 
         <div>
@@ -152,10 +154,10 @@
         </div>
 
         <div>
-          <span class="about__info-title">07+</span>
+          <span class="about__info-title">03+</span>
           <span class="about__info-name">Completed <br> projects </span>
         </div>
-      </div> -->
+      </div>
       <div class="about__buttons">
         <a download="" href="assets/pdf/pauline_rouger_resume.pdf" class="button button--flex">
           Download CV <i class="uil uil-download-alt button__icon"></i>
@@ -167,10 +169,147 @@
 </section>
 
     <!--==================== SKILLS ====================-->
-    <section class="skills section" id="skills">
+<section class="skills section" id="skills">
+  <section class="skills section" id="skills">
+    <h2 class="section__title">Skills</h2>
+    <span class="section__subtitle">My technical level</span>
 
+    <div class="skills__container container grid">
+      <div>
+        <!--====================== SKILLS 1 =============================-->
+        <div class="skills__content skills__open">
+          <div class="skills__header">
+            <i class="uil uil-brackets-curly skills__icon"></i>
 
-    </section>
+            <div>
+              <h1 class="skills__title">Backend Development</h1>
+              <!-- <span class="skills__subtitle">More than 2 years</span> -->
+            </div>
+
+            <i class="uil uil-angle-down skills__arrow"></i>
+          </div>
+
+          <div class="skills__list grid">
+            <div class="skills__data">
+              <div class="skills__titles">
+                <h3 class="skills__name">Ruby on Rails</h3>
+                <div class="skills__number">80%</div>
+              </div>
+              <div class="skills__bar">
+                <div class="skills__percentage skills__laravel"></div>
+              </div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__titles">
+                <h3 class="skills__name">Elixir</h3>
+                <div class="skills__number">80%</div>
+              </div>
+              <div class="skills__bar">
+                <div class="skills__percentage skills__php"></div>
+              </div>
+            </div>
+
+            <!-- <div class="skills__data">
+              <div class="skills__titles">
+                <h3 class="skills__name">Django</h3>
+                <div class="skills__number">60%</div>
+              </div>
+              <div class="skills__bar">
+                <div class="skills__percentage skills__django"></div>
+              </div>
+            </div> -->
+          </div>
+        </div>
+
+        <!--====================== SKILLS 2 =============================-->
+        <div class="skills__content skills__close">
+          <div class="skills__header">
+            <i class="uil uil-brackets-curly skills__icon"></i>
+
+            <div>
+              <h1 class="skills__title">Frontend Development</h1>
+              <!-- <span class="skills__subtitle">More than 1 year</span> -->
+            </div>
+
+            <i class="uil uil-angle-down skills__arrow"></i>
+          </div>
+
+          <div class="skills__list grid">
+            <div class="skills__data">
+              <div class="skills__titles">
+                <h3 class="skills__name">HTML5</h3>
+                <div class="skills__number">70%</div>
+              </div>
+              <div class="skills__bar">
+                <div class="skills__percentage skills__react"></div>
+              </div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__titles">
+                <h3 class="skills__name">CSS3</h3>
+                <div class="skills__number">60%</div>
+              </div>
+              <div class="skills__bar">
+                <div class="skills__percentage skills__material"></div>
+              </div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__titles">
+                <h3 class="skills__name">Javascript</h3>
+                <div class="skills__number">80%</div>
+              </div>
+              <div class="skills__bar">
+                <div class="skills__percentage skills__javascript"></div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div>
+          <!--====================== SKILLS 3 =============================-->
+          <div class="skills__content skills__close">
+            <div class="skills__header">
+              <i class="uil uil-brackets-curly skills__icon"></i>
+
+              <div>
+                <h1 class="skills__title">Database Design</h1>
+                <!-- <span class="skills__subtitle">More than 2 years</span> -->
+              </div>
+
+              <i class="uil uil-angle-down skills__arrow"></i>
+            </div>
+
+            <div class="skills__list grid">
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">MySQL</h3>
+                  <div class="skills__number">80%</div>
+                </div>
+                <div class="skills__bar">
+                  <div class="skills__percentage skills__mysql"></div>
+                </div>
+              </div>
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">Graphql</h3>
+                  <div class="skills__number">70%</div>
+                </div>
+                <div class="skills__bar">
+                  <div class="skills__percentage skills__graphql"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+</section>
 
     <!--==================== QUALIFICATION ====================-->
     <section class="qualification section">
