accordeon skills function

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="skills__number">80%</div>
               </div>
               <div class="skills__bar">
-                <div class="skills__percentage skills__laravel"></div>
+                <div class="skills__percentage skills__rails"></div>
               </div>
             </div>
 
@@ -206,7 +206,7 @@
                 <div class="skills__number">80%</div>
               </div>
               <div class="skills__bar">
-                <div class="skills__percentage skills__php"></div>
+                <div class="skills__percentage skills__elixir"></div>
               </div>
             </div>
 
@@ -242,7 +242,7 @@
                 <div class="skills__number">70%</div>
               </div>
               <div class="skills__bar">
-                <div class="skills__percentage skills__react"></div>
+                <div class="skills__percentage skills__html"></div>
               </div>
             </div>
 
@@ -252,7 +252,7 @@
                 <div class="skills__number">60%</div>
               </div>
               <div class="skills__bar">
-                <div class="skills__percentage skills__material"></div>
+                <div class="skills__percentage skills__css"></div>
               </div>
             </div>
 
