--- a/index.html
+++ b/index.html
@@ -313,147 +313,255 @@
 
     <!--==================== QUALIFICATION ====================-->
 <section class="qualification section">
-            <h2 class="section__title">Qualifications</h2>
-            <div class="section__subtitle">My personal journey</div>
+    <h2 class="section__title">Qualifications</h2>
+    <div class="section__subtitle">My personal journey</div>
 
-            <div class="qualification__container container">
-                <div class="qualification__tabs">
-                    <div class="qualification__button button--flex qualification__active" data-target="#education">
-                        <i class="uil uil-graduation-cap qualification__icon"></i>
-                        Education
+    <div class="qualification__container container">
+        <div class="qualification__tabs">
+            <div class="qualification__button button--flex qualification__active" data-target="#education">
+                <i class="uil uil-graduation-cap qualification__icon"></i>
+                Education
+            </div>
+
+            <div class="qualification__button button--flex" data-target="#work">
+                <i class="uil uil-briefcase-alt qualification__icon"></i>
+                Work
+            </div>
+        </div>
+
+        <div class="qualification__sections">
+            <!--===============================QUALIFICATION CONTENT 1 ===========================-->
+            <div class="qualification__content qualification__active" data-content id="education">
+                <!--===============================QUALIFICATION 1 ===========================-->
+                <!-- <div class="qualification__data">
+                    <div>
+                        <h3 class="qualification__title">BSc. in Computer Science</h3>
+                        <span class="qualification__subtitle">Chittagong University of Engineering & Technology</span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            March, 2015 - September, 2019
+                        </div>
                     </div>
 
-                    <div class="qualification__button button--flex" data-target="#work">
-                        <i class="uil uil-briefcase-alt qualification__icon"></i>
-                        Work
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
                     </div>
+                </div> -->
+
+                <!--===============================QUALIFICATION 2 ===========================-->
+                <div class="qualification__data">
+                    <div></div>
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+
+                    <div>
+                        <h3 class="qualification__title">Full-stack Web Developer Bootcamp</h3>
+                        <span class="qualification__subtitle">Le wagon Australia</span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            July, 2021 - January, 2022
+                        </div>
+                    </div>
+
+
                 </div>
 
-                <div class="qualification__sections">
-                    <!--===============================QUALIFICATION CONTENT 1 ===========================-->
-                    <div class="qualification__content qualification__active" data-content id="education">
-                        <!--===============================QUALIFICATION 1 ===========================-->
-                        <!-- <div class="qualification__data">
-                            <div>
-                                <h3 class="qualification__title">BSc. in Computer Science</h3>
-                                <span class="qualification__subtitle">Chittagong University of Engineering & Technology</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    March, 2015 - September, 2019
-                                </div>
-                            </div>
-
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-                        </div> -->
-
-                        <!--===============================QUALIFICATION 2 ===========================-->
-                        <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__title">Full-stack Web Developer Bootcamp</h3>
-                                <span class="qualification__subtitle">Le wagon Australia</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    July, 2021 - January, 2022
-                                </div>
-                            </div>
-
-
-                        </div>
-
-                        <!--===============================QUALIFICATION 3 ===========================-->
-                        <div class="qualification__data">
-                            <div>
-                                <h3 class="qualification__title">Management Tourism Industry Master</h3>
-                                <span class="qualification__subtitle">University of Quebec in Montreal (UQAM)</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    September, 2002 - June, 2005
-                                </div>
-                            </div>
-
-                            <div>
-                                <span class="qualification__rounder"></span>
-                            </div>
+                <!--===============================QUALIFICATION 3 ===========================-->
+                <div class="qualification__data">
+                    <div>
+                        <h3 class="qualification__title">Management Tourism Industry Master</h3>
+                        <span class="qualification__subtitle">University of Quebec in Montreal (UQAM)</span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            September, 2002 - June, 2005
                         </div>
                     </div>
 
-                    <!--===============================QUALIFICATION CONTENT 2 ===========================-->
-                    <div class="qualification__content" data-content id="work">
-                        <!--===============================QUALIFICATION 1 ===========================-->
-                        <div class="qualification__data">
-                            <div>
-                                <h3 class="qualification__title">Full-stack Web Developer</h3>
-                                <span class="qualification__subtitle">
-                                    <a href="https://www.cogini.com/" target="_blank">Cogini</a>
-                                </span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    February, 2022 - Present
-                                </div>
-                            </div>
-
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-                        </div>
-
-                        <!--===============================QUALIFICATION 2 ===========================-->
-                        <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__title">Entrepreneur & Travel Planner</h3>
-                                <span class="qualification__subtitle">
-                                    <a href="https://timetotravel.online/" target="_blank">Time To Travel</a>
-                                </span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    August, 2019 - Running
-                                </div>
-                            </div>
-                        </div>
-
-                        <!--===============================QUALIFICATION 3 ===========================-->
-                        <div class="qualification__data">
-                            <div>
-                                <h3 class="qualification__title">Team Leader & Senior consultant</h3>
-                                <span class="qualification__subtitle">
-                                    <a href="https://www.helloworldlimited.com.au/" target="_blank">Helloworld Travel Limited</a>
-                                </span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    June, 2011 - March, 2020
-                                </div>
-                            </div>
-
-                            <div>
-                                <span class="qualification__rounder"></span>
-                            </div>
-                        </div>
+                    <div>
+                        <span class="qualification__rounder"></span>
                     </div>
                 </div>
             </div>
-        </section>
 
-    <!--==================== SERVICES ====================-->
-    <section class="services section" id="services">
+            <!--===============================QUALIFICATION CONTENT 2 ===========================-->
+            <div class="qualification__content" data-content id="work">
+                <!--===============================QUALIFICATION 1 ===========================-->
+                <div class="qualification__data">
+                    <div>
+                        <h3 class="qualification__title">Full-stack Web Developer</h3>
+                        <span class="qualification__subtitle">
+                            <a href="https://www.cogini.com/" target="_blank">Cogini</a>
+                        </span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            February, 2022 - Present
+                        </div>
+                    </div>
 
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+                </div>
 
-    </section>
+                <!--===============================QUALIFICATION 2 ===========================-->
+                <div class="qualification__data">
+                    <div></div>
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+
+                    <div>
+                        <h3 class="qualification__title">Entrepreneur & Travel Planner</h3>
+                        <span class="qualification__subtitle">
+                            <a href="https://timetotravel.online/" target="_blank">Time To Travel</a>
+                        </span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            August, 2019 - Running
+                        </div>
+                    </div>
+                </div>
+
+                <!--===============================QUALIFICATION 3 ===========================-->
+                <div class="qualification__data">
+                    <div>
+                        <h3 class="qualification__title">Team Leader & Senior consultant</h3>
+                        <span class="qualification__subtitle">
+                            <a href="https://www.helloworldlimited.com.au/" target="_blank">Helloworld Travel Limited</a>
+                        </span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            June, 2011 - March, 2020
+                        </div>
+                    </div>
+
+                    <div>
+                        <span class="qualification__rounder"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--==================== SERVICES ====================-->
+<!-- <section class="services section" id="services">
+  <h2 class="section__title">Services</h2>
+  <span class="section__subtitle">What I offer</span>
+
+  <div class="services__container container grid"> -->
+    <!--===================== SERVICES 1 ====================-->
+    <!-- <div class="services__content">
+      <div>
+        <i class="uil uil-arrow services__icon"></i>
+        <h3 class="services__title">Backend <br> Developer</h3>
+
+        <span class="button button--flex button--small button--link services__button">
+          View More
+          <i class="uil uil-arrow-right button__icon"></i>
+        </span>
+
+        <div class="services__modal">
+          <div class="services__modal-content">
+            <h4 class="services__modal-title">Backend <br> Developer</h4>
+            <i class="uil uil-times services__modal-close"></i>
+
+            <ul class="services__modal-services grid">
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I design Web Architecture.</p>
+              </li>
+
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I create structural backbone of the platform.</p>
+              </li>
+
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I maintain version control tools.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--===================== SERVICES 2 ====================-->
+    <!-- <div class="services__content">
+      <div>
+        <i class="uil uil-web-grid services__icon"></i>
+        <h3 class="services__title">Frontend <br> Developer</h3>
+
+        <span class="button button--flex button--small button--link services__button">
+          View More
+          <i class="uil uil-arrow-right button__icon"></i>
+        </span>
+
+        <div class="services__modal">
+          <div class="services__modal-content">
+            <h4 class="services__modal-title">Frontend <br> Developer</h4>
+            <i class="uil uil-times services__modal-close"></i>
+
+            <ul class="services__modal-services grid">
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I develop user interface.</p>
+              </li>
+
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I create web page.</p>
+              </li>
+
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I restructure ui/ux components.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+ -->
+    <!--===================== SERVICES 3 ====================-->
+    <!-- <div class="services__content">
+      <div>
+        <i class="uil uil-pen services__icon"></i>
+        <h3 class="services__title">Database <br> Designer</h3>
+
+        <span class="button button--flex button--small button--link services__button">
+          View More
+          <i class="uil uil-arrow-right button__icon"></i>
+        </span>
+
+        <div class="services__modal">
+          <div class="services__modal-content">
+            <h4 class="services__modal-title">Database <br> Designer</h4>
+            <i class="uil uil-times services__modal-close"></i>
+
+            <ul class="services__modal-services grid">
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I design database.</p>
+              </li>
+
+              <li class="services__modal-service">
+                <i class="uil uil-check-circle services__modal-icon"></i>
+                <p>I structure data for user.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> --> 
 
     <!--==================== PORTFOLIO ====================-->
     <section class="portfolio section" id="portfolio">
