swiper added to portfolio section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!--==================== SWIPER CSS ====================-->
-  <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="assets/CSS/swiper-bundle.min.css">
 
   <!--==================== CSS ====================-->
   <link rel="stylesheet" href="assets/CSS/styles.css">
@@ -568,7 +568,7 @@
     <h2 class="section__title">Portfolio</h2>
     <span class="section__subtitle">Most Recent Project</span>
 
-    <div class="portfolio__container container swiper-container">
+    <div class="portfolio__container container swiper">
       <div class="swiper-wrapper">
         <!--======================== PORTFOLIO 1 =============-->
         <div class="portfolio__content grid swiper-slide">
@@ -685,7 +685,7 @@
   </a>
 
   <!--==================== SWIPER JS ====================-->
-  <script src="assets/js/swiper-bundle.min.js"></script>
+  <script src="assets/javascript/swiper-bundle.min.js"></script>
 
   <!--==================== MAIN JS ====================-->
   <script src="assets/javascript/main.js"></script>
