testimonail section added

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
   <div class="home__container container grid">
     <div class="home__content grid">
       <div class="home__social">
-        <a href="https://www.linkedin.com/in/paulinerouger/" target="_blank" class="home__social-icon">
+        <a href="https://www.linkedin.com/in/paulinerouger/" target="_blank" class="footer__social">
           <i class="uil uil-linkedin-alt"></i>
         </a>
-        <a href="https://stackoverflow.com/users/16621883/paulinetw" target="_blank" class="home__social-icon">
+        <a href="https://stackoverflow.com/users/16621883/paulinetw" target="_blank" class="footer__social">
           <i class="fa fa-stack-overflow"></i>
         </a>
-        <a href="https://github.com/PaulineTW" target="_blank" class="home__social-icon">
+        <a href="https://github.com/PaulineTW" target="_blank" class="footer__social">
           <i class="uil uil-github-alt"></i>
         </a>
       </div>
@@ -662,22 +662,202 @@
 
     <!--==================== TESTIMONIAL ====================-->
     <section class="testimonial section">
+      <h2 class="section__title">Testimonial</h2>
+        <span class="section__subtitle">What people saying about me</span>
 
+        <!--==================== TESTIMONIAL 1 ====================-->
+        <div class="testimonial__content">
+          <div class="testimonal__data">
+            <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
 
+            <div>
+              <h3 class="testimonial__name">Eric Cholet</h3>
+              <span class="testimonal__title">IT Manager & Developer</span>
+            </div>
+          </div>
+          <!-- <div>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+          </div> -->
+          <p class="testimonial_description">Pauline has all the requirements to be able to work on Web Dev project: an open mind and a good sens of analysis. Due to great experiences in different fields, she has the ability to understand the needs of a customer and provide quality web services.</p>
+        </div>
+
+        <!--==================== TESTIMONIAL 2 ====================-->
+        <div class="testimonial__content">
+          <div class="testimonal__data">
+            <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
+
+            <div>
+              <h3 class="testimonial__name">Julian Harrington</h3>
+              <span class="testimonal__title">Program Manager at Le Wagon</span>
+            </div>
+          </div>
+          <!-- <div>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+          </div> -->
+          <p class="testimonial_description">Pauline's drive for results, inquisitive nature, and incredible work ethic made her a remarkable student at Le Wagon. Her range of experience and technical prowess ensures she would be a wonderful addition to any team.</p>
+        </div>
+
+        <!--==================== TESTIMONIAL 3====================-->
+        <div class="testimonial__content">
+          <div class="testimonal__data">
+            <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+
+            <div>
+              <h3 class="testimonial__name">Mathieu Longé</h3>
+              <span class="testimonal__title">Software Engineer @99designs</span>
+            </div>
+          </div>
+          <!-- <div>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+            <i class="uil uil-star testimonal__icon-star"></i>
+          </div> -->
+          <p class="testimonial_description">Pauline's ...</p>
+        </div>
+
+                <!--==================== TESTIMONIAL 4====================-->
+                <div class="testimonial__content">
+                  <div class="testimonal__data">
+                    <img src="assets/img/testimonial4.jpg" alt="" class="testimonial__img">
+        
+                    <div>
+                      <h3 class="testimonial__name">Morgan Hughes</h3>
+                      <span class="testimonal__title">Branding & Web consultant - Senior Graphic Designer</span>
+                    </div>
+                  </div>
+                  <!-- <div>
+                    <i class="uil uil-star testimonal__icon-star"></i>
+                    <i class="uil uil-star testimonal__icon-star"></i>
+                    <i class="uil uil-star testimonal__icon-star"></i>
+                    <i class="uil uil-star testimonal__icon-star"></i>
+                    <i class="uil uil-star testimonal__icon-star"></i>
+                  </div> -->
+                  <p class="testimonial_description">When Pauline told me she was going through a career change in digital I definitely supported her move.
+                    She has all the skills to thrive in Web Development. She is technically minded and very adaptable. Through her previous job she had to to teamwork and collaboration on a daily basis.
+                    We worked together on her business website to start her business, she had no experience in Web Dev, she really impressed me with her critical thinking, creativity, and problem-solving. Her attention to detail was remarkable.
+                    To sum up, Pauline is very social and has a positive mindset, she will be a real asset for any tech company.</p>
+                </div>
+        
     </section>
 
     <!--==================== CONTACT ME ====================-->
-    <section class="contact section" id="contact">
+  <section class="contact section" id="contact">
+    <h2 class="section__title">Contact Me</h2>
+    <span class="section__subtitle">Get in touch</span>
 
+    <div class="contact__container container grid">
+        <div>
+            <div class="contact__information">
+                <i class="uil uil-phone contact__icon"></i>
 
-    </section>
-  </main>
+                <div>
+                    <h3 class="contact__title">Call Me</h3>
+                    <span class="contact__subtitle">+886-919484064</span>
+                </div>
+            </div>
+
+            <div class="contact__information">
+                <i class="uil uil-envelope contact__icon"></i>
+
+                <div>
+                    <h3 class="contact__title">Email</h3>
+                    <span class="contact__subtitle">paulinerouge@hotmail.com</span>
+                </div>
+            </div>
+
+            <div class="contact__information">
+                <i class="uil uil-map-marker contact__icon"></i>
+
+                <div>
+                    <h3 class="contact__title">Location</h3>
+                    <span class="contact__subtitle">Taipei, Taiwan</span>
+                </div>
+            </div>
+
+            <form action="" class="contact__form grid">
+                <div class="contact__inputs grid">
+                    <div class="contact__content">
+                        <label for="name" class="contact__label">Name</label>
+                        <input type="text" id="name" class="contact__input">
+                    </div>
+
+                    <div class="contact__content">
+                        <label for="email" class="contact__label">Email</label>
+                        <input type="email" id="email" class="contact__input">
+                    </div>
+                </div>
+
+                <div class="contact__content">
+                    <label for="project-contact" class="contact__label">Project</label>
+                    <input type="text" id="project-contact" class="contact__input">
+                </div>
+
+                <div class="contact__content">
+                    <label for="message-contact" class="contact__label">Message</label>
+                    <textarea name="" cols="0" rows="7" id="message-contact" class="contact__input"></textarea>
+                </div>
+
+                <div>
+                    <a href="#" class="button button--flex">Send Message</a>
+                    <i class="uil uil-message button__icon"></i>
+                </div>
+            </form>
+        </div>
+    </div>
+
+  </section>
+</main>
 
   <!--==================== FOOTER ====================-->
   <footer class="footer">
+    <div class="footer__bg">
+        <div class="footer__container container grid">
+            <div>
+                <h1 class="footer__title">Pauline</h1>
+                <span class="footer__subtitle">Junior Full Stack Developer</span>
+            </div>
 
+            <ul class="footer__links">
+                <li>
+                    <a href="#services" class="footer__link">Services</a>
+                </li>
 
-  </footer>
+                <li>
+                    <a href="#portfolio" class="footer__link">Portfolio</a>
+                </li>
+
+                <li>
+                    <a href="#contact" class="footer__link">Contact Me</a>
+                </li>
+            </ul>
+
+            <div class="footer__socials">
+              <a href="https://www.linkedin.com/in/paulinerouger/" target="_blank" class="footer__social">
+                <i class="uil uil-linkedin-alt"></i>
+              </a>
+              <a href="https://stackoverflow.com/users/16621883/paulinetw" target="_blank" class="footer__social">
+                <i class="fa fa-stack-overflow"></i>
+              </a>
+              <a href="https://github.com/PaulineTW" target="_blank" class="footer__social">
+                <i class="uil uil-github-alt"></i>
+              </a>
+            </div>
+        </div>
+
+        <p class="footer__copy">Made by Pauline</p>
+    </div>
+
+</footer>
 
   <!--==================== SCROLL TOP ====================-->
   <a href="" class="scrollup" id="scroll-up">
