--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <i class="uil uil-brackets-curly skills__icon"></i>
 
                     <div>
-                        <h1 class="skills__title">Frontend developer</h1>
+                        <h1 class="skills__title">Frontend</h1>
                     </div>
 
                     <i class="uil uil-angle-down skills__arrow"></i>
@@ -209,7 +209,7 @@
                     <i class="uil uil-server-network skills__icon"></i>
 
                     <div>
-                        <h1 class="skills__title">Backend developer</h1>
+                        <h1 class="skills__title">Backend</h1>
                     </div>
 
                     <i class="uil uil-angle-down skills__arrow"></i>
