fix scroll-top bug

--- a/index.html
+++ b/index.html
@@ -367,24 +367,8 @@
         <div class="qualification__sections">
             <!--===============================QUALIFICATION CONTENT 1 ===========================-->
             <div class="qualification__content qualification__active" data-content id="education">
-                <!--===============================QUALIFICATION 1 ===========================-->
-                <!-- <div class="qualification__data">
-                    <div>
-                        <h3 class="qualification__title">BSc. in Computer Science</h3>
-                        <span class="qualification__subtitle">Chittagong University of Engineering & Technology</span>
-                        <div class="qualification__calendar">
-                            <i class="uil uil-calendar-alt"></i>
-                            March, 2015 - September, 2019
-                        </div>
-                    </div>
 
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                    </div>
-                </div> -->
-
-                <!--===============================QUALIFICATION 2 ===========================-->
+                <!--=============================== EDUCATION 1 ===========================-->
                 <div class="qualification__data">
                     <div></div>
                     <div>
@@ -404,7 +388,7 @@
 
                 </div>
 
-                <!--===============================QUALIFICATION 3 ===========================-->
+                <!--=============================== EDUCATION 2 ===========================-->
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Management Tourism Industry</h3>
@@ -423,7 +407,7 @@
 
             <!--===============================QUALIFICATION CONTENT 2 ===========================-->
             <div class="qualification__content" data-content id="work">
-                <!--===============================QUALIFICATION 1 ===========================-->
+                <!--=============================== WORK 1 ===========================-->
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Full-Stack Developer</h3>
@@ -442,7 +426,7 @@
                     </div>
                 </div>
 
-                <!--===============================QUALIFICATION 2 ===========================-->
+                <!--=============================== WORK 2 ===========================-->
                 <div class="qualification__data">
                     <div></div>
                     <div>
@@ -462,7 +446,7 @@
                     </div>
                 </div>
 
-                <!--===============================QUALIFICATION 3 ===========================-->
+                <!--=============================== WORK 3 ===========================-->
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Team Leader & Senior consultant</h3>
@@ -483,120 +467,6 @@
         </div>
     </div>
 </section>
-
-<!--==================== SERVICES ====================-->
-<!-- <section class="services section" id="services">
-  <h2 class="section__title">Services</h2>
-  <span class="section__subtitle">What I offer</span>
-
-  <div class="services__container container grid"> -->
-    <!--===================== SERVICES 1 ====================-->
-    <!-- <div class="services__content">
-      <div>
-        <i class="uil uil-arrow services__icon"></i>
-        <h3 class="services__title">Backend <br> Developer</h3>
-
-        <span class="button button--flex button--small button--link services__button">
-          View More
-          <i class="uil uil-arrow-right button__icon"></i>
-        </span>
-
-        <div class="services__modal">
-          <div class="services__modal-content">
-            <h4 class="services__modal-title">Backend <br> Developer</h4>
-            <i class="uil uil-times services__modal-close"></i>
-
-            <ul class="services__modal-services grid">
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I design Web Architecture.</p>
-              </li>
-
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I create structural backbone of the platform.</p>
-              </li>
-
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I maintain version control tools.</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    ===================== SERVICES 2 ====================
-    <!-- <div class="services__content">
-      <div>
-        <i class="uil uil-web-grid services__icon"></i>
-        <h3 class="services__title">Frontend <br> Developer</h3>
-
-        <span class="button button--flex button--small button--link services__button">
-          View More
-          <i class="uil uil-arrow-right button__icon"></i>
-        </span>
-
-        <div class="services__modal">
-          <div class="services__modal-content">
-            <h4 class="services__modal-title">Frontend <br> Developer</h4>
-            <i class="uil uil-times services__modal-close"></i>
-
-            <ul class="services__modal-services grid">
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I develop user interface.</p>
-              </li>
-
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I create web page.</p>
-              </li>
-
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I restructure ui/ux components.</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
- -->
-    <!--===================== SERVICES 3 ====================-->
-    <!-- <div class="services__content">
-      <div>
-        <i class="uil uil-pen services__icon"></i>
-        <h3 class="services__title">Database <br> Designer</h3>
-
-        <span class="button button--flex button--small button--link services__button">
-          View More
-          <i class="uil uil-arrow-right button__icon"></i>
-        </span>
-
-        <div class="services__modal">
-          <div class="services__modal-content">
-            <h4 class="services__modal-title">Database <br> Designer</h4>
-            <i class="uil uil-times services__modal-close"></i>
-
-            <ul class="services__modal-services grid">
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I design database.</p>
-              </li>
-
-              <li class="services__modal-service">
-                <i class="uil uil-check-circle services__modal-icon"></i>
-                <p>I structure data for user.</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
 
   <!--==================== PORTFOLIO ====================-->
   <section class="portfolio section" id="portfolio">
@@ -889,7 +759,7 @@
 </footer>
 
   <!--==================== SCROLL TOP ====================-->
-  <a href="" class="scrollup" id="scroll-up">
+  <a href="" class="scrollup" id="scroll-top">
     <i class="uil uil-arrow-up scroll__icon"></i>
   </a>
 
