change img portfolio

--- a/index.html
+++ b/index.html
@@ -709,7 +709,6 @@
                         <button type="submit" style="border: hidden;">
                           <a href="#" class="button button--flex">
                             Send Message
-                            <!-- <input type=”submit” value=”Submit”>  -->
                             <i class="uil uil-message button__icon"></i>
                           </a>
                         </button>
@@ -757,7 +756,7 @@
             </div>
         </div>
 
-        <p class="footer__copy">Pauline Rouger © 2022</p>
+        <p class="footer__copy">Built with ♡ by Pauline Rouger</p>
     </div>
 
 </footer>
