changing few details after deployment

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
           <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
 
           <div class="portfolio__data">
-            <h3 class="portfolio__title">AusHello</h3>
+            <h3 class="portfolio__title">AusHello [desktop only]</h3>
             <p class="portfolio__description">
               Location based directory to connect refugees to find local resources in communities around Australia
             </p>
